--- a/package.json
+++ b/package.json
@@ -10,5 +10,12 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mocha": "^9.1.2",
+    "nodejs": "0.0.0",
+    "nodemon": "^2.0.13",
+    "supertest": "^6.1.6"
+  }
 }
